--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
             // Check if the selected date is the current date
             if (selectedDate === currentDate) {
                 // Display the happyBirthday.gif if the selected date is the current date
-                document.getElementById('specialImage').innerHTML = '<img src="happyBirthday.gif" alt="Happy Birthday">';
+                var specialImageDiv = document.getElementById('specialImage');
+                specialImageDiv.innerHTML = '<img src="happyBirthday.gif" alt="Happy Birthday">';
+                
+                // Wait for 5 seconds before showing the button
+                setTimeout(function() {
+                    var buttonHTML = '<button onclick="location.href=\'secondPage.html\'">Go to Second Page</button>';
+                    specialImageDiv.insertAdjacentHTML('beforeend', buttonHTML);
+                }, 5000);
             } else {
-                // Clear the gif display if the date is not the current date
+                // Clear the gif display and remove the button if the date is not the current date
                 document.getElementById('specialImage').innerHTML = '';
             }
         }
@@ -44,7 +51,7 @@
     <h2>Select a Date</h2>
     <input type="date" id="dateSelector" onchange="handleDateSelection()">
     <p id="displayDate">Selected Date: None</p>
-    <div id="specialImage"></div> <!-- Container for the special gif -->
+    <div id="specialImage"></div> <!-- Container for the special gif and the button -->
 </div>
 
 </body>
