--- a/secondPage.html
+++ b/secondPage.html
@@ -9,35 +9,32 @@
             background-color: black;
             color: #0f0;
             font-family: 'Courier New', Courier, monospace;
-            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        #container {
+            width: 80%; /* Anpassen für die optimale Breite */
+            margin: auto;
+            overflow-wrap: break-word; /* Sorgt dafür, dass der Text umbricht */
         }
         @keyframes blink-cursor {
             from, to { border-color: transparent }
             50% { border-color: #0f0; }
         }
         #message {
-            white-space: pre;
-            overflow: hidden;
+            white-space: pre-wrap; /* Erlaubt Zeilenumbrüche und Leerzeichen */
+            overflow: hidden; /* Versteckt den Überlauf */
             border-right: .15em solid #0f0;
             animation: blink-cursor 500ms steps(40) infinite;
         }
     </style>
 </head>
 <body>
-    <div id="message"></div>
+    <div id="container">
+        <div id="message"></div>
+    </div>
     <script>
-        const text = "Wenn Sie heute Geburstag haben, müssen Sie wohl die berühmte Agentin Leberkaas sein. Zuersteinmal wünsche ich Ihnen natürlich alles Gute zu ihrem Geburstag! Leider muss ich sie kontaktieren, da wiedereinmal etwas vorgefallen ist und wir Ihre Hilfe brauchen! Ein gemeiner Dackelentführer treibt sein Unwesen! Er hat schon zwei Dackel entführt und treibt ein böses Spiel! ... oooooohhh nein, er ist hier im Hauptquartier!!! Er übernimmt die VERBINDUNG!!DLwfk<-sf.,-.fa .....";
-        let i = 0;
-        function typeWriter() {
-            if (i < text.length) {
-                document.getElementById("message").textContent += text.charAt(i);
-                i++;
-                setTimeout(typeWriter, 30); // Geschwindigkeit, mit der die Buchstaben erscheinen
-            }
-        }
-        window.onload = function() {
-            typeWriter();
-        };
-    </script>
-</body>
-</html>
+        const text = "Wenn Sie heute Geburstag haben, müssen Sie wohl die berühmte Agentin Leberkaas sein. Zuersteinmal wünsche ich Ihnen natürlich alles Gute zu ihrem Geburstag! Leider muss ich sie kontaktieren, da wiedereinmal etwas vorgefallen ist und wir Ihre Hilfe brauchen
