--- a/secondPage.html
+++ b/secondPage.html
@@ -18,9 +18,15 @@
         #message, #asciiDachshund {
             white-space: pre-wrap;
             font-size: 1em; /* Standard-Schriftgröße für den Text */
+             width: 80%;
+            margin: auto;
+            overflow-wrap: break-word;
         }
         #asciiDachshund {
-            font-size: 4em; /* Größere Schriftgröße für ASCII-Art */
+            font-size: 4px; /* Größere Schriftgröße für ASCII-Art */
+             width: 80%;
+            margin: auto;
+            overflow-wrap: break-word;
         }
     </style>
 </head>
