--- a/secondPage.html
+++ b/secondPage.html
@@ -94,7 +94,7 @@
     <div id="popup">
         <p>WARNUNG: Systemintegritätsverletzung erkannt.</p>
         <p>Unbefugter Zugriff wurde identifiziert. Starten Sie umgehend Sicherheitsprotokolle und kontaktieren Sie den Systemadministrator.</p>
-        <button id="closePopup">Schließen</button>
+        <button id="closePopup"><a href="dritteSeite.html">Schließen</a></button>
     </div>
 </div>
 
