--- a/dritteSeite.html
+++ b/dritteSeite.html
@@ -7,6 +7,7 @@
         body, html {
             height: 100%;
             margin: 0;
+            padding: 20px; /* Etwas Polsterung, damit der Text nicht direkt am Rand ist */
             background-color: black;
             color: #0f0;
             font-family: 'Courier New', Courier, monospace;
@@ -16,9 +17,29 @@
             overflow: hidden;
         }
 
+        #container {
+            width: 100%;
+            max-width: 800px; /* Begrenzt die maximale Breite des Textcontainers */
+            position: relative;
+        }
+
         #text {
             white-space: pre-wrap;
             font-size: 20px;
+        }
+
+        /* Blinkender Cursor */
+        #cursor {
+            display: inline-block;
+            width: 10px;
+            height: 20px;
+            background-color: #0f0;
+            margin-left: 5px;
+            animation: blink 1s infinite;
+        }
+
+        @keyframes blink {
+            50% { opacity: 0; }
         }
 
         /* Stil für den Verzerrungseffekt */
@@ -27,8 +48,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            right: 0;
+            bottom: 0;
             background: repeating-linear-gradient(
                 to bottom,
                 rgba(255, 0, 0, 0.1) 0%,
@@ -36,7 +57,7 @@
                 rgba(0, 0, 255, 0.1) 66%
             );
             z-index: 1;
-            pointer-events: none; /* Ermöglicht Klicken "durch" den Effekt */
+            pointer-events: none;
             animation: distortAnimation 1s infinite linear;
         }
 
@@ -48,7 +69,10 @@
 </head>
 <body>
 
-<div id="text"></div>
+<div id="container">
+    <div id="text"></div>
+    <div id="cursor"></div>
+</div>
 <div id="distortion"></div>
 
 <script>
@@ -59,10 +83,14 @@
         if (index < message.length) {
             document.getElementById("text").innerHTML += message.charAt(index);
             index++;
-            setTimeout(typeWriter, 50); // Anpassung für die Geschwindigkeit des Typewriter-Effekts
+            setTimeout(typeWriter, 50);
         } else {
-            // Nachdem der Text komplett angezeigt wurde, aktiviere den Verzerrungseffekt
-            document.getElementById("distortion").style.display = "block";
+            // Cursor ausblenden nach Fertigstellung
+            document.getElementById("cursor").style.display = "none";
+            // Verzerrungseffekt aktivieren
+            setTimeout(function() {
+                document.getElementById("distortion").style.display = "block";
+            }, 500);
         }
     }
 
