--- a/seiteVier.html
+++ b/seiteVier.html
@@ -45,12 +45,12 @@
 <div id="message">Du kannst nur einen Dackel retten!</div>
 
 <div class="dog-container" id="dog1">
-    <img src="path/to/your/dog-image-1.jpg" alt="Dackel 1">
+    <img src="dog-image-1.jpg" alt="Dackel 1">
     <div class="cross">&#10060;</div> <!-- Rotes Kreuz Symbol -->
 </div>
 
 <div class="dog-container" id="dog2">
-    <img src="path/to/your/dog-image-2.jpg" alt="Dackel 2">
+    <img src="dog-image-2.jpg" alt="Dackel 2">
     <div class="cross">&#10060;</div> <!-- Rotes Kreuz Symbol -->
 </div>
 
