--- a/seiteVier.html
+++ b/seiteVier.html
@@ -43,6 +43,7 @@
 <body>
 
 <div id="message">Du kannst nur einen Dackel retten!</div>
+<div id="message">Wen willst du retten?</div>
 
 <div class="dog-container" id="dog1">
     <img src="dog-image-1.jpg" alt="Dackel 1">
