--- a/seiteVier.html
+++ b/seiteVier.html
@@ -161,7 +161,7 @@
     setTimeout(completeAsciiArtDisplay, 5000); // Zeigt das Popup nach 5 Sekunden
 </script>
 
-    <div id="popup">ERROR: MISSION GESCHEITERT</div>
+    <div id="popup2">ERROR: MISSION GESCHEITERT</div>
 
 <script>
     document.querySelectorAll('.dog-container').forEach(container => {
