--- a/Yv.html
+++ b/Yv.html
@@ -3,68 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dackel Seite</title>
+    <title>Toni der Dackel</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
             height: 100%;
-            overflow: hidden;
-        }
-        .half {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 50%;
-            color: #fff;
+            font-family: Arial, sans-serif;
             text-align: center;
+            background-color: #f0f0f0;
         }
-        .half:first-child {
-            background: #6495ED; /* Himmelblau */
-        }
-        .half:last-child {
-            background: #F08080; /* Hellrot */
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
         }
         img {
-            max-height: 50%;
-            max-width: 80%;
+            max-width: 100%;
+            height: auto;
         }
-        #typewriter {
-            font-family: 'Courier New', monospace;
-            white-space: pre;
-            overflow: hidden;
+        .info {
+            margin-top: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
         }
     </style>
 </head>
 <body>
 
-<div class="half">
-    <img src="path/to/your/first-dachshund-image.jpg" alt="Dackel 1">
+<div class="container">
+    <img src="dog-image-1.jpg" alt="Toni">
+    <div class="info">
+        <h1>Toni der Dackel</h1>
+        <p>Agentin Leberkaas, du hast mich in dem Chaos gefunden! <3  Ich habe ein tolles Geschenk für dich!</p>
+        <p>Ich bin so froh, dass du hier bist. Ich wünsche dir alles Gute, Liebe, Gesundheit und viel Glück zu deinem Geburstag!/p>
+        <p>Aber erst müssen wir meinen Freund finden! Er ist hier auch irgendwo versteckt!</p>
+        <p>Finde ihn und dann nichts wie weg hier! Ich habe noch gehört, dass der Bösewicht in richtung https://one .. geflohen ist mehr weiss ich nicht. Aber lass uns erst meinen Freund finden!</p>
+    </div>
 </div>
-<div class="half">
-    <img src="path/to/your/second-dachshund-image.jpg" alt="Dackel 2">
-    <div id="typewriter"></div>
-</div>
-
-<script>
-    const text = "Hier sind die Dackel! Einer oben und einer unten.";
-    let index = 0;
-    const speed = 150; // Geschwindigkeit des Typewriter-Effekts in ms
-
-    function typeWriter() {
-        if (index < text.length) {
-            document.getElementById("typewriter").innerHTML += text.charAt(index);
-            index++;
-            setTimeout(typeWriter, speed);
-        }
-    }
-
-    window.onload = function() {
-        typeWriter();
-    };
-</script>
 
 </body>
 </html>
-
