--- a/XaT.html
+++ b/XaT.html
@@ -2,9 +2,51 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Zufällige Datei</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Negroni der Dackel</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f0f0f0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        .info {
+            margin-top: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-    Hier sind keine Dackel!
+
+<div class="container">
+    <img src="dog-image-1.jpg" alt="Toni">
+    <div class="info">
+        <h1>Negroni der Dackel</h1>
+        <p>Agentin Leberkaas, du hast mich in dem Chaos gefunden! <3  Ich habe ein tolles Geschenk für dich!</p>
+        <p>Ich bin so froh, dass du hier bist. Ich wünsche dir alles Gute, Liebe, Gesundheit und viel Glück zu deinem Geburstag!</p>
+        <p>Aber erst müssen wir meinen Freund finden! Er ist hier auch irgendwo versteckt! Oder hast du ihn schon gefunden?</p>
+        <p>Finde wir ihn und dann nichts wie weg hier! Ich habe noch gehört, dass der Bösewicht in richtung ... ox.de geflohen ist mehr weiss ich nicht. Aber lass uns erst meinen Freund finden und dann dort hin gehen und ihn schnappen!</p>
+    </div>
+</div>
+
 </body>
 </html>
