--- a/Yv.html
+++ b/Yv.html
@@ -43,8 +43,8 @@
         <h1>Toni der Dackel</h1>
         <p>Agentin Leberkaas, du hast mich in dem Chaos gefunden! <3  Ich habe ein tolles Geschenk für dich!</p>
         <p>Ich bin so froh, dass du hier bist. Ich wünsche dir alles Gute, Liebe, Gesundheit und viel Glück zu deinem Geburstag!</p>
-        <p>Aber erst müssen wir meinen Freund finden! Er ist hier auch irgendwo versteckt!</p>
-        <p>Finde ihn und dann nichts wie weg hier! Ich habe noch gehört, dass der Bösewicht in richtung https://one .. geflohen ist mehr weiss ich nicht. Aber lass uns erst meinen Freund finden!</p>
+        <p>Aber erst müssen wir meinen Freund finden! Er ist hier auch irgendwo versteckt! Oder hast du ihn schon gefunden?</p>
+        <p>Finde wir ihn und dann nichts wie weg hier! Ich habe noch gehört, dass der Bösewicht in richtung ... ox.de geflohen ist mehr weiss ich nicht. Aber lass uns erst meinen Freund finden und dann dort hin gehen und ihn schnappen!</p>
     </div>
 </div>
 
