--- a/XaT.html
+++ b/XaT.html
@@ -38,7 +38,7 @@
 <body>
 
 <div class="container">
-    <img src="dog-image-1.jpg" alt="Toni">
+    <img src="dog-image-1.jpg" alt="Negroni">
     <div class="info">
         <h1>Negroni der Dackel</h1>
         <p>Agentin Leberkaas, du hast mich in dem Chaos gefunden! <3  Ich habe ein tolles Geschenk für dich!</p>
