--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
-    <title>Date Selector with Special Date Feature</title>
+    <title>Login Agent Leberkaas</title>
     <style>
         body {
             display: flex;
@@ -55,7 +55,7 @@ document.addEventListener('DOMContentLoaded', function() {
             var currentDate = new Date().toISOString().slice(0, 10); // Format YYYY-MM-DD
 
             // Display the selected date
-            document.getElementById('displayDate').innerText = "Selected Date: " + selectedDate;
+            document.getElementById('displayDate').innerText = "Willkommen Agent Leberkaas. Bitte geben Sie zur Authentifizierung Ihren Geburtstag ein: " + selectedDate;
 
             // Check if the selected date is the current date
             if (selectedDate === currentDate) {
