--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <p id="typewriterText"></p>
     <input type="date" id="dateSelector" style="margin-top: 20px;">
     <div id="specialImage"></div>
-    <button id="continueButton" onclick="window.location.href='secondPage.html';">Zur geheimen Nachricht</button>
+    <button id="continueButton" onclick="window.location.href='secondPage.html';" style="display:none;">Zur geheimen Nachricht</button>
 </div>
 
 <script>
