--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
-    <title>Login Agent Leberkaas</title>
+    <title>Agentenlogin</title>
     <style>
         body {
             display: flex;
@@ -61,7 +61,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </div>
 
 <script>
-    const greetingText = "Willkommen Agent Leberkaas.";
+    const greetingText = "Willkommen Agent. Geben Sie zur Authentifizierung ihren Geburtstag ein.";
     let index = 0;
     
     function startTypewriter() {
